--- a/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
+++ b/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+    <ItemGroup>
+    <!-- Reference to the WebAPI project -->
+    <ProjectReference Include="..\AquAnalyzerAPI\AquAnalyzerAPI.csproj" />
+
+  </ItemGroup>
+
 </Project>
