--- a/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
+++ b/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
@@ -1,4 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
+<ItemGroup>
+    <ProjectReference Include="..\AquAnalyzerAPI\AquAnalyzerAPI.csproj" />
+</ItemGroup>
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
