--- a/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
+++ b/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
@@ -12,4 +12,13 @@
 
   </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
