--- a/AquAnalyzerAPI/appsettings.json
+++ b/AquAnalyzerAPI/appsettings.json
@@ -13,5 +13,6 @@
     "Issuer": "YourIssuer",
     "Audience": "YourAudience",
     "Key": "YourSuperSecretKey"
-  }
+  },
+  "AllowedOrigins": "http://localhost:5044"
 }
