--- a/AquAnalyzerWebApp/appsettings.json
+++ b/AquAnalyzerWebApp/appsettings.json
@@ -1,6 +1,9 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=database.db"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
-
