--- a/AquAnalyzerAPI/appsettings.json
+++ b/AquAnalyzerAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=database.db"
+    "DefaultConnection": "Data Source=Shared/database.db"
   },
   "Logging": {
     "LogLevel": {
