--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ data.json
 
 # Ignore Entity Framework Core migration snapshots (optional, if you don't want to track snapshots)
 Migrations/
+.fake
