--- a/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
+++ b/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
@@ -9,4 +9,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AquAnalyzerAPI\AquAnalyzerAPI.csproj" />
+  </ItemGroup>
+
 </Project>
