--- a/AquAnalyzerWebApp/appsettings.json
+++ b/AquAnalyzerWebApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ApiBaseAddress": "http://localhost:5126/",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=database.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
