--- a/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
+++ b/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 <ItemGroup>
-    <ProjectReference Include="..\AquAnalyzerAPI\AquAnalyzerAPI.csproj" />
+    <ProjectReference Include="../AquAnalyzerAPI/AquAnalyzerAPI.csproj" />
 </ItemGroup>
 
   <PropertyGroup>
