changing json files, we will see what ale has

--- a/AquAnalyzerAPI/appsettings.Development.json
+++ b/AquAnalyzerAPI/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=dev-database.db" 
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug", 
+      "Microsoft.AspNetCore": "Debug"
     }
-  }
+  },
+  "AllowedOrigins": "http://localhost:5065" 
 }
