--- a/AquAnalyzerAPI/appsettings.json
+++ b/AquAnalyzerAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Shared/database.db"
+    "DefaultConnection": "Data Source=database.db"
   },
   "Logging": {
     "LogLevel": {
@@ -13,6 +13,6 @@
     "Issuer": "YourIssuer",
     "Audience": "YourAudience",
     "Key": "YourSuperSecretKey"
-  },
-  "AllowedOrigins": "http://localhost:5044"
+  }
 }
+
