--- a/AquAnalyzerWebApp/appsettings.Development.json
+++ b/AquAnalyzerWebApp/appsettings.Development.json
@@ -1,8 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=dev-database.db"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Debug"
     }
-  }
+  },
+  "Jwt": {
+    "Issuer": "DevIssuer",
+    "Audience": "DevAudience",
+    "Key": "DevSuperSecretKey"
+  },
+  "AllowedOrigins": "http://localhost:5065"
 }
+
