--- a/AquAnalyzerWebApp/appsettings.json
+++ b/AquAnalyzerWebApp/appsettings.json
@@ -1,6 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Shared/database.db"
+    "DefaultConnection": "Data Source=production-database.db"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Jwt": {
+    "Issuer": "ProductionIssuer",
+    "Audience": "ProductionAudience",
+    "Key": "ProductionSuperSecretKey"
   }
 }
+
 
