--- a/AquAnalyzerWebApp/appsettings.Development.json
+++ b/AquAnalyzerWebApp/appsettings.Development.json
@@ -1,18 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=dev-database.db"
-  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Debug"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "Jwt": {
-    "Issuer": "DevIssuer",
-    "Audience": "DevAudience",
-    "Key": "DevSuperSecretKey"
-  },
-  "AllowedOrigins": "http://localhost:5065"
+  }
 }
-
