--- a/AquAnalyzerWebApp/appsettings.json
+++ b/AquAnalyzerWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=production-database.db"
+    "DefaultConnection": "Data Source=database.db"
   },
   "Logging": {
     "LogLevel": {
@@ -8,11 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Jwt": {
-    "Issuer": "ProductionIssuer",
-    "Audience": "ProductionAudience",
-    "Key": "ProductionSuperSecretKey"
-  }
+  "AllowedHosts": "*"
 }
-
 
