--- a/AquAnalyzerAPI/appsettings.Development.json
+++ b/AquAnalyzerAPI/appsettings.Development.json
@@ -1,12 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=dev-database.db" 
-  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug", 
-      "Microsoft.AspNetCore": "Debug"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedOrigins": "http://localhost:5065" 
+  }
 }
