Enhance AquAnalyzer layout and error handling; update logging and data models

--- a/AquAnalyzerWebApp/appsettings.json
+++ b/AquAnalyzerWebApp/appsettings.json
@@ -5,9 +5,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "AquAnalyzerWebApp": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
 }
-
