--- a/AquAnalyzerAPI/appsettings.json
+++ b/AquAnalyzerAPI/appsettings.json
@@ -1,19 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=database.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "AquAnalyzerAPI": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-        "DefaultConnection": "Data Source=Data Source=database.db"
-    },
-  "Jwt": {
-    "Key": "This Is My Random Secret Key Which Is At Least Sixteen Characters",
-    "Issuer": "JWTAuthenticationServer",
-    "Audience": "JWTServiceBlazorClient",
-    "Subject": "JWTServiceAccessToken"
-  },
   "AllowedHosts": "*"
 }
-
