--- a/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
+++ b/AquAnalyzerWebApp/AquAnalyzerWebApp.csproj
@@ -19,6 +19,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.0" />
+      <PackageReference Include="Radzen.Blazor" Version="5.7.0" />
     </ItemGroup>
 
 </Project>
